resolve all warnings